SERVER-6736 Changed size calculation to represent MBs as 1024*1024 instead of 10^6 in createOplog()